<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#548E88"
    android:backgroundTint="#548E88"
    tools:context=".SingleSemGPAFragment">

    <TextView
        android:id="@+id/singlesemstatemnt"
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:text="@string/course_grade_welcome"
        android:textColor="#F6F5F5"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/num_classesNumber"
        android:layout_width="71dp"
        android:layout_height="55dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlesemstatemnt"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/Calc_single_semGPA"
        android:layout_width="105dp"
        android:layout_height="53dp"
        android:layout_marginBottom="104dp"
        android:backgroundTint="#155875"
        android:text="@string/calculate_string"
        android:textColor="#FAF9F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/yourgpaTEXT"
        android:layout_width="113dp"
        android:layout_height="61dp"
        android:layout_marginBottom="24dp"
        android:text="TextView"
        android:textColor="#FAF6F6"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calc_single_semGPA"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:backgroundTint="#155875"
        android:text="GO"
        android:textColor="#F8F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/num_classesNumber"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#155875"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/gpa2"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem2"
        android:textAlignment="center"
        android:textColor="#F8F5F5"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <EditText
        android:id="@+id/gpa1"
        android:layout_width="115dp"
        android:layout_height="51dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem1"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <EditText
        android:id="@+id/gpa3"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem3"
        android:textAlignment="center"
        android:textColor="#FBFAFA"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <EditText
        android:id="@+id/gpa4"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem4"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <EditText
        android:id="@+id/gpa5"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem5"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <EditText
        android:id="@+id/gpa6"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem6"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/gpa7"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem7"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <EditText
        android:id="@+id/gpa8"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem8"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <EditText
        android:id="@+id/gpa9"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem9"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <EditText
        android:id="@+id/gpa10"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:background="#155875"
        android:backgroundTint="#155875"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/GPA_sem10"
        android:textAlignment="center"
        android:textColor="#F8F4F4"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

    <TextView
        android:id="@+id/reset_clickable_text"
        android:layout_width="69dp"
        android:layout_height="32dp"
        android:text="@string/reset_text"
        android:textColor="#09548F"
        android:textSize="26dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.239"
        app:layout_constraintStart_toEndOf="@+id/Calc_single_semGPA"
        app:layout_constraintTop_toBottomOf="@+id/gpa10"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/semstaken"
        android:layout_width="181dp"
        android:layout_height="79dp"
        android:layout_marginStart="16dp"
        android:text="@string/parts_of_grade_string"
        android:textColor="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/gpa2"
        app:layout_constraintEnd_toStartOf="@+id/num_classesNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlesemstatemnt"
        app:layout_constraintVertical_bias="0.188" />

</androidx.constraintlayout.widget.ConstraintLayout>