<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#548E88"
    tools:context=".ui.final_grade_calc.FinalGradeCalcView">

    <TextView
        android:id="@+id/curr_grade"
        android:layout_width="160dp"
        android:layout_height="38dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="85dp"
        android:background="#548E88"
        android:text="@string/curr_grade_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F8F5F4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/currgradetext"
        android:layout_width="91dp"
        android:layout_height="59dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#EFEDED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toEndOf="@+id/curr_grade"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/perc_final"
        android:layout_width="269dp"
        android:layout_height="38dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:background="#548E88"
        android:fontFamily="sans-serif-medium"
        android:text="@string/final_worth_string"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F8F5F5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curr_grade"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/finalworthtext"
        android:layout_width="88dp"
        android:layout_height="57dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#FAF7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/perc_final"
        app:layout_constraintTop_toBottomOf="@+id/currgradetext" />

    <TextView
        android:id="@+id/fin_grade"
        android:layout_width="162dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:background="#548E88"
        android:fontFamily="sans-serif-medium"
        android:text="@string/desired_grade_string"
        android:textAlignment="center"
        android:textColor="#FAF7F7"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perc_final"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/whattheywanttext"
        android:layout_width="141dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="77dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="#F4EFEF"
        android:textColorHint="#F3EFEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fin_grade"
        app:layout_constraintTop_toBottomOf="@+id/finalworthtext" />

    <Button
        android:id="@+id/button"
        android:layout_width="198dp"
        android:layout_height="73dp"
        android:layout_marginBottom="52dp"
        android:background="#69ABC8"
        android:backgroundTint="#155875"
        android:text="@string/calculate_string"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/needed"
        android:layout_width="372dp"
        android:layout_height="98dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="64dp"
        android:text=""
        android:textColor="#D2B48C"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whattheywanttext"
        app:layout_constraintVertical_bias="0.447" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:background="#155875"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toTopOf="@+id/curr_grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

</androidx.constraintlayout.widget.ConstraintLayout>